# xProjects

./: .gitignore  Makefile  README.md  README.txt
.github/workflows/: main.yml
cmake/: CMakeLists.txt
src/: main.cpp
tmp/: test  test.cpp
